--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "admin-lte": "^3.0.0-alpha.2",
+        "animate.css": "^4.1.1",
         "bootstrap-vue": "^2.21.2",
+        "chart.js": "^3.1.1",
         "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.29.1",
         "sweetalert2": "^10.15.6",
         "vform": "^1.0.1",
+        "vue-element-loading": "^2.0.2",
+        "vue-loading-overlay": "^3.0.1",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.5.1",
         "vue-upload-multiple-image": "^1.1.6"
